[package]
name = "array-allocators"
version = "0.1.0"
edition = "2021"

description = "Memory allocators that manage memory within an array."
license = "Apache-2.0"
repository = "https://github.com/JonathanWoollett-Light/array-allocators"

[dependencies]
nix = { git = "https://github.com/JonathanWoollett-Light/nix", rev = "49770ec7365618e107f2dfd3b3ed77738a20030e" }
log = { version = "0.4.17", optional = true }

[dev-dependencies]
rand = "0.8.5"