[package]
name = "array-allocators"
version = "0.1.0"
edition = "2021"

description = "Memory allocators that manage memory within an array."
license = "Apache-2.0"
repository = "https://github.com/JonathanWoollett-Light/array-allocators"

[dependencies]
nix = { git = "https://github.com/JonathanWoollett-Light/nix", rev = "146087b1437b76f6defa097ec05a54ea09cdee02" }
log = { version = "0.4.17", optional = true }

[dev-dependencies]
rand = "0.8.5"